made a working example of /GET with Exposed.
